--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -19,6 +19,8 @@ nav .new-tweet {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Bungee", sans-serif;
+
 }
 
 nav .new-tweet i {
