Altered- added a nav span rule for font-family and removed from .logo and .new-tweet

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,8 +10,11 @@ nav {
   box-sizing: border-box;
 }
 
-nav .logo {
+nav span {
   font-family: 'Bungee', sans-serif;
+}
+
+nav .logo {
   font-size: 2em;
 }
 
@@ -19,8 +22,6 @@ nav .new-tweet {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Bungee", sans-serif;
-
 }
 
 nav .new-tweet i {
