--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -10,15 +10,12 @@ html {
   box-sizing: inherit;
 }
 
-/*
- * Global layout stuff
- */
-
 body {
   color: #545149;
-  background-color: #f4f1ec;
+  background-color: cornsilk;
   font-size: 24px;
   font-family: 'Source Sans 3', sans-serif;
+  padding-top: 120px;
 }
 
 
