--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,11 @@ header {
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  background-image: url('../images/foggy-birds.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+
 
 /* Avatar Image */
 header .avatar {
