Feature- added main selector and properties

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,5 +18,12 @@ body {
   padding-top: 120px;
 }
 
+main {
+  width: 90%;
+  margin: 0 auto;
+  background-color: cornsilk;
+  align-items: center;
+
+}
 
 
