Altered- changed class red-text to counter-red-text for clarity

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -23,7 +23,7 @@
   color: #657786;
   margin-top: 5px;
 }
-.new-tweet .counter.red-text {
+.new-tweet .counter.counter-red-text {
   color: red;
 }
 
