--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,14 +1,27 @@
 .profile-header {
-  width: 100%;
+  width: 40%;
   background-color: #D19F35;
   display: flex;
   flex-direction: column;
   padding: 20px;
-  height: 400px;
+  margin: 70px;
+  height: 300px;
   justify-content: center;
   align-items: center;
   background-image: url('../images/foggy-birds.png');
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
+}
+
+.profile-pic {
+  width: 160px;
+  height: 160px;
+  margin-top: 40px;
+}
+
+.user-name {
+  font-size: 1.1em;
+  font-weight: 300;
+  color: white;
 }
 
